--- a/config/database.yml
+++ b/config/database.yml
@@ -9,34 +9,35 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   reconnect: false
   database: Dyplom_development
   pool: 5
-  username: root
+  username: bird
   password:
-  socket: /var/run/mysqld/mysqld.sock
-
+ 
+ 
+ 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   reconnect: false
   database: Dyplom_test
   pool: 5
-  username: root
+  username: bird
   password:
-  socket: /var/run/mysqld/mysqld.sock
+
 
 production:
-  adapter: mysql2
+  adapter: postgresql
   encoding: utf8
   reconnect: false
   database: Dyplom_production
   pool: 5
-  username: root
+  username: bird
   password:
-  socket: /var/run/mysqld/mysqld.sock
+
