--- a/config/database.yml
+++ b/config/database.yml
@@ -9,35 +9,34 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: postgresql
+  adapter: mysql2
   encoding: utf8
   reconnect: false
   database: Dyplom_development
   pool: 5
-  username: bird
+  username: root
   password:
- 
- 
- 
+  socket: /var/run/mysqld/mysqld.sock
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: mysql2
   encoding: utf8
   reconnect: false
   database: Dyplom_test
   pool: 5
-  username: bird
+  username: root
   password:
-
+  socket: /var/run/mysqld/mysqld.sock
 
 production:
-  adapter: postgresql
+  adapter: mysql2
   encoding: utf8
   reconnect: false
   database: Dyplom_production
   pool: 5
-  username: bird
+  username: root
   password:
-
+  socket: /var/run/mysqld/mysqld.sock
